<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="fav_btn">Favorites</string>
    <string name="playlists_btn">Playlists</string>
    <string name="no_of_songs">Number Of Songs</string>
    <string name="player">Player</string>
    <string name="start">00:00</string>
    <string name="run_time">Run Time</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="headphone_icon">Icon</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="start_time">00:00</string>
    <string name="back_btn">Back Button</string>
</resources>