<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/shuffle_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/shuffle_icon"
                android:text="@string/shuffle_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/playlist_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/fav_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/library_music"
                android:text="@string/playlists_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/fav_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:contentDescription="@string/playlists_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/favorite_icon"
                android:text="@string/fav_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_of_songs"
            android:layout_margin="10dp"
            android:id="@+id/totalSongs"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/musicRV"
            />

        </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:id="@+id/navView"
        />

</androidx.drawerlayout.widget.DrawerLayout>