<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_back_icon"
            android:background="@color/white"
            android:contentDescription= "@string/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="110dp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:text="@string/player"
            android:textSize="20sp"
            android:gravity="center"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/favorite_border_icon"
            android:background="@color/white"
            android:contentDescription="MusicImg" />
    </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        app:shapeAppearanceOverlay="@style/curved_square"
        app:strokeColor="@color/teal_200"
        app:strokeWidth="5dp"
        />

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="Song Name"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_skip_previous_24"
            app:iconSize="30dp"
            app:iconTint="@color/black"
            android:backgroundTint="@color/teal_200"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="30dp"
            android:layout_height="40dp"
            app:icon="@drawable/pause_icon"
            app:iconSize="40dp"
            app:iconTint="@color/white"
            android:backgroundTint="@color/std"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved_square"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/skip_next_icon"
            app:iconTint="@color/black"
            app:iconSize="30dp"
            android:backgroundTint="@color/teal_200"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/start"
            />
        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/run_time"
            />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        >
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>